data/collection/fixes/descriptions/scala/scala-9574
```java
$scala
Welcome to Scala 2.12.0-M3 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_51).
Type in expressions for evaluation. Or try :help.

scala> sealed trait Parent
defined trait Parent

scala> case object Boy extends Parent
defined object Boy

scala> case object Girl extends Parent
defined object Girl

scala> trait HasGirl { val x: Girl.type }
defined trait HasGirl

scala> case class Thing(x: Boy.type) extends HasGirl
defined class Thing

scala> Thing( Girl )
<console>:18: error: type mismatch;
 found   : Girl.type
 required: Boy.type
       Thing( Girl )
              ^

scala> Thing ( Boy )
res1: Thing = Thing(Boy)

scala> def f: HasGirl = Thing(Boy)
f: HasGirl
```
Originally, I posted this issue on StackOverflow - http://stackoverflow.com/questions/33974428/unexpected-trait-behavior.

More details from Twitter conversation: \
https://twitter.com/Gentmen/status/670660159077818369.